--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,9 @@
 *::after {
     box-sizing: border-box;
 }
-
+.navigation{
+    margin:auto;
+}
 @media (prefers-reduced-motion: no-preference) {
     :root {
         scroll-behavior: smooth;
@@ -8724,7 +8726,7 @@ body {
 .background-img {
     position: absolute;
     top: 0;
-    left: 0;
+right: 0;
     width: 100%;
     height: 100%;
     background-size: cover;
